[workspace]
members = ["derive", "playground"]

[package]
name = "async-graphql-semantic-nullability"
version = "0.1.0"
edition = "2021"

[dependencies.async-graphql]
git = "https://github.com/contentstech-com/async-graphql"
rev = "60bff38"
features = ["nullable-result"]

[dependencies]
async-graphql-semantic-nullability-derive = { path = "derive" }
