[workspace]
members = ["derive", "playground"]

[package]
name = "async-graphql-semantic-nullability"
version = "0.1.0"
edition = "2021"

[dependencies.async-graphql]
git = "https://github.com/contentstech-com/async-graphql"
rev = "061152c"
features = ["nullable-result"]

[dependencies]
async-graphql-semantic-nullability-derive = { path = "derive" }
