[package]
name = "async-graphql-semantic-nullability-playground"
version = "0.1.0"
edition = "2021"

[dependencies.async-graphql]
git = "https://github.com/contentstech-com/async-graphql"
rev = "60bff38"
features = ["nullable-result"]

[dependencies]
async-graphql-semantic-nullability = { path = "../" }
tokio = "1.41.1"
tokio-stream = "0.1.16"
